--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -8,17 +8,21 @@
   border-radius: 4px;
   outline: none;
   color: var(--secondary-text-color);
+  &::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
-.mail-input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: rgba(255, 255, 255, 0.6);
+
+.footer-input {
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+  }
 }
-.footer-input:hover,
-.footer-input:focus {
-  border-color: var(--accent-color);
-}
+
 .footer-mail-icon {
   width: 24px;
   height: 24px;
