--- a/sass/components/_footer-button.scss
+++ b/sass/components/_footer-button.scss
@@ -6,8 +6,8 @@
   padding-left: 29px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-button:hover,
-.footer-button:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
