--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,17 +8,15 @@
   align-items: center;
   justify-content: center;
   transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: scale(2);
-  opacity: 0;
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  &.is-hidden .modal {
+    transform: scale(2);
+    opacity: 0;
+  }
 }
 
 .modal {
@@ -49,15 +47,15 @@
   justify-content: center;
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .close-icon {
   width: 18px;
   height: 18px;
-}
-.close-button:hover,
-.close-button:focus {
-  fill: var(--accent-color);
 }
 
 .modal-title {
@@ -95,24 +93,22 @@
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+  }
+  &:hover + .input-icon,
+  &:focus + .input-icon {
+    fill: var(--accent-color);
+  }
 }
-.modal-input:hover,
-.modal-input:focus {
-  border-color: var(--accent-color);
-}
-.modal-input:hover + .input-icon,
-.modal-input:focus + .input-icon {
-  fill: var(--accent-color);
-}
+
 .input-icon {
   position: absolute;
   left: 15px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-text::placeholder {
-  color: rgba(117, 117, 117, 0.5);
 }
 .modal-text {
   width: 100%;
@@ -124,6 +120,9 @@
   resize: none;
   outline: none;
   color: var(--primary-text-color);
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 .modal-lock {
   margin-bottom: 20px;
@@ -137,31 +136,31 @@
   position: relative;
   align-items: center;
   justify-content: center;
+  span {
+    width: 16px;
+    height: 15px;
+    border: 2px solid #212121;
+    border-radius: 2px;
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
-.check-text span {
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  margin-right: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.modal-checkbox {
+  &:hover + .check-text span,
+  &:focus + .check-text span {
+    border: 2px solid var(--accent-color);
+  }
+  &:checked + .check-text span {
+    background-color: var(--accent-color);
+    border: none;
+  }
 }
-.modal-checkbox:hover + .check-text span,
-.modal-checkbox:focus + .check-text span {
-  border: 2px solid var(--accent-color);
-}
-.modal-checkbox:checked + .check-text span {
-  background-color: var(--accent-color);
-  border: none;
-}
-.modal-checkbox:checked + .check-text span {
-  border-color: var(--accent-color);
-}
+
 .check-link {
   color: var(--accent-color);
 }
@@ -172,8 +171,8 @@
   background-color: var(--accent-color);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-button:hover,
-.modal-button:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
