--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -6,8 +6,10 @@
   width: 44px;
   height: 44px;
 }
-.social-item + .social-item {
-  margin-left: 10px;
+.social-item {
+  & + .social-item {
+    margin-left: 10px;
+  }
 }
 .social-link {
   width: 100%;
@@ -17,18 +19,19 @@
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent-color);
-}
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: var(--secondary-text-color);
-}
+
 .social-icon {
   width: 20px;
   height: 20px;
   fill: var(--primary-icon-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .social-link:hover &,
+  .social-link:focus & {
+    fill: var(--secondary-text-color);
+  }
 }
