--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -21,14 +21,20 @@
   display: block;
   font-style: normal;
 }
-.footer-item:not(:last-child) {
-  margin-bottom: 9px;
+.footer-item {
+  &:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 .footer-list {
   display: inline-block;
 }
 .footer-address {
   color: var(--secondary-text-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .footer-address,
 .footer-contacts {
@@ -36,16 +42,12 @@
   line-height: 1.71;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-address:hover,
-.footer-address:focus {
-  color: var(--accent-color);
-}
 .footer-contacts {
   color: var(--accent-footer-color);
-}
-.footer-contacts:hover,
-.footer-contacts:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .footer-title {
   margin-bottom: 20px;
@@ -60,10 +62,10 @@
 }
 .footer-link {
   background-color: rgba(255, 255, 255, 0.1);
-}
-.footer-link:hover,
-.footer-link:focus {
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 .footer-subscribr {
   margin-left: auto;
