--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,6 +12,9 @@
 .site-nav {
   display: flex;
   align-items: center;
+  & .current {
+    color: var(--accent-color);
+  }
 }
 .logo {
   font-family: Raleway, sans-serif;
@@ -32,22 +35,17 @@
 .site-nav .link,
 .auth-nav .contacts {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.site-nav .link:hover,
-.site-nav .link:focus,
-.auth-nav .contacts:hover,
-.auth-nav .contacts:focus {
-  color: var(--accent-color);
-}
-.site-nav .current {
-  color: var(--accent-color);
-}
-.header-item:not(:last-child) {
-  margin-right: 50px;
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .header-item {
   display: flex;
   align-items: center;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 .header-link {
   display: block;
@@ -59,15 +57,17 @@
   letter-spacing: 0.02em;
   position: relative;
 }
-.current::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  display: block;
-  bottom: -1px;
+.current {
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    display: block;
+    bottom: -1px;
+  }
 }
 .contacts-container {
   margin-left: auto;
