--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,23 @@
   --primary-icon-color: #afb1b8;
 }
 
+.social-link,
+.backdrop,
+.close-button,
+.header-container,
+.container-nav,
+.site-nav,
+.header-item,
+.auth-nav {
+  display: flex;
+  align-items: center;
+}
+
+.social-list,
+.section-main-buttons {
+  @extend %justify-content;
+}
+
 img {
   display: block;
 }
@@ -86,13 +103,9 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover, .button:focus {
+.button:hover,
+.button:focus {
   background-color: #188ce8;
-}
-
-.social-list {
-  display: flex;
-  justify-content: center;
 }
 
 .social-item {
@@ -108,13 +121,12 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover, .social-link:focus {
+.social-link:hover,
+.social-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -149,7 +161,8 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-input:hover, .footer-input:focus {
+.footer-input:hover,
+.footer-input:focus {
   border-color: var(--accent-color);
 }
 
@@ -169,7 +182,8 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-button:hover, .footer-button:focus {
+.footer-button:hover,
+.footer-button:focus {
   background-color: #188ce8;
 }
 
@@ -179,8 +193,6 @@ body {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
-  display: flex;
-  align-items: center;
   justify-content: center;
   transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
 }
@@ -201,10 +213,12 @@ body {
   min-height: 581px;
   background-color: var(--secondary-text-color);
   border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   position: relative;
   transform: scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
 
@@ -217,14 +231,13 @@ body {
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  display: flex;
-  align-items: center;
   justify-content: center;
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-button:hover, .close-button:focus {
+.close-button:hover,
+.close-button:focus {
   fill: var(--accent-color);
 }
 
@@ -270,10 +283,12 @@ body {
   border-radius: 4px;
   background-color: transparent;
   outline: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover, .modal-input:focus {
+.modal-input:hover,
+.modal-input:focus {
   border-color: var(--accent-color);
 }
 
@@ -331,7 +346,8 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox:hover + .check-text span,
@@ -357,27 +373,13 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button:hover, .modal-button:focus {
+.modal-button:hover,
+.modal-button:focus {
   background-color: #188ce8;
 }
 
 .header-nav {
   border-bottom: 1px solid #ececec;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.container-nav {
-  display: flex;
-  align-items: center;
-}
-
-.site-nav {
-  display: flex;
-  align-items: center;
 }
 
 .site-nav .current {
@@ -408,15 +410,11 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav .link:hover, .site-nav .link:focus,
+.site-nav .link:hover,
+.site-nav .link:focus,
 .auth-nav .contacts:hover,
 .auth-nav .contacts:focus {
   color: var(--accent-color);
-}
-
-.header-item {
-  display: flex;
-  align-items: center;
 }
 
 .header-item:not(:last-child) {
@@ -447,11 +445,6 @@ body {
 
 .contacts-container {
   margin-left: auto;
-}
-
-.auth-nav {
-  display: flex;
-  align-items: center;
 }
 
 .contacts {
@@ -485,7 +478,12 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: var(--accent-bgc-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-img.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -604,7 +602,8 @@ body {
   flex-basis: calc(100% / 4 - 30px);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--secondary-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-photo {
@@ -647,7 +646,8 @@ body {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover, .clients-link:focus {
+.clients-link:hover,
+.clients-link:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -712,7 +712,8 @@ body {
   color: var(--secondary-text-color);
 }
 
-.footer-address:hover, .footer-address:focus {
+.footer-address:hover,
+.footer-address:focus {
   color: var(--accent-color);
 }
 
@@ -727,7 +728,8 @@ body {
   color: var(--accent-footer-color);
 }
 
-.footer-contacts:hover, .footer-contacts:focus {
+.footer-contacts:hover,
+.footer-contacts:focus {
   color: var(--accent-color);
 }
 
@@ -749,7 +751,8 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-link:hover, .footer-link:focus {
+.footer-link:hover,
+.footer-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -775,29 +778,34 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.buttons:hover, .buttons:focus {
+.buttons:hover,
+.buttons:focus {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .section-main-buttons {
-  display: flex;
-  justify-content: center;
   margin-bottom: 50px;
 }
 
 .section-main-buttons .current {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-main-buttons .current {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*Портфолио*/
@@ -821,7 +829,8 @@ body {
 
 .item-pictures .link:hover,
 .item-pictures .link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .section-portfolio-wrapper {
@@ -841,7 +850,8 @@ body {
   height: 100%;
   padding: 63px 24px;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .item-pictures .link:hover .section-portfolio-text,
