--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,8 +4,7 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
-  display: flex;
-  align-items: center;
+  @extend %align-items;
   justify-content: center;
   transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
   &.is-hidden {
@@ -42,8 +41,7 @@
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  display: flex;
-  align-items: center;
+  @extend %align-items;
   justify-content: center;
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
