--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,6 +1,5 @@
 .social-list {
-  display: flex;
-  justify-content: center;
+  @extend %justify-content;
 }
 .social-item {
   width: 44px;
@@ -15,8 +14,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
+  @extend %align-items;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
