--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -9,10 +9,7 @@
   text-align: center;
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+  @include font(700, 16px, 1.87, 0.06em);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
