--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -9,9 +9,7 @@
   outline: none;
   color: var(--secondary-text-color);
   &::placeholder {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
+    @include font(400, 16px, 1.25);
     color: rgba(255, 255, 255, 0.6);
   }
 }
