--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,9 +16,7 @@
 .logo {
   font-family: Raleway, sans-serif;
   color: var(--accent-color);
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  @include font(700, 26px, 1.19);
   text-decoration: none;
 }
 .logo-item {
@@ -38,7 +36,8 @@
   }
 }
 .header-item {
-  @extend %align-items;
+  display: flex;
+  align-items: center;
   &:not(:last-child) {
     margin-right: 50px;
   }
@@ -48,9 +47,7 @@
   padding: 32px 0;
   margin: 0;
   color: var(--title-text-color);
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  @include font(500, 14px, 1.14, 0.02em);
   position: relative;
 }
 .current {
@@ -69,16 +66,15 @@
   margin-left: auto;
 }
 .auth-nav {
-  @extend %align-items;
+  display: flex;
+  align-items: center;
 }
 .contacts {
   display: flex;
   padding: 32px 0;
   margin: 0;
   color: var(--primary-text-color);
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  @include font(500, 14px, 1.14, 0.02em);
   align-items: center;
 }
 .mail-icon {
