--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -17,10 +17,7 @@
 .section-title {
   color: var(--secondary-text-color);
   margin-bottom: 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  @include font(900, 44px, 1.36, 0.06em);
   text-align: center;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
 }
