--- a/sass/layout/_page-portfolio.scss
+++ b/sass/layout/_page-portfolio.scss
@@ -8,9 +8,7 @@
   border: 1px solid transparent;
   font-family: inherit;
   color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
+  @include font(500, 16px, 1.62);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -66,9 +64,7 @@
 .section-portfolio-text {
   color: var(--secondary-text-color);
   background-color: rgba(33, 150, 243, 0.9);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
+  @include font(400, 18px, 1.56);
   position: absolute;
   top: 0;
   opacity: 0;
@@ -92,14 +88,9 @@
 .section-pictures-title {
   margin-bottom: 4px;
   color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+  @include font(700, 18px, 2, 0.06em);
 }
 .section-pictures-text {
   color: var(--primary-text-color);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.87;
+  @include font(400, 16px, 1.87);
 }
