--- a/sass/layout/_section-plan.scss
+++ b/sass/layout/_section-plan.scss
@@ -20,8 +20,7 @@
 .section-plan-title {
   margin-bottom: 10px;
   color: var(--title-text-color);
-  font-weight: 700;
-  line-height: 1.14;
+  @include font(700, 14px, 1.14);
   text-transform: uppercase;
 }
 .section-plan-item {
@@ -30,6 +29,5 @@
   flex-basis: calc(100% / 4 - 30px);
 }
 .section-plan-text {
-  font-weight: 400;
-  line-height: 1.71;
+  @include font(400, 14px, 1.71);
 }
