--- a/sass/layout/_section-work.scss
+++ b/sass/layout/_section-work.scss
@@ -6,9 +6,7 @@
 .section-clients-title {
   margin-bottom: 50px;
   color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  @include font(700, 36px, 1.17);
   text-align: center;
 }
 .section-work-img {
@@ -31,8 +29,6 @@
   background-color: rgba(47, 48, 58, 0.8);
   text-align: center;
   position: absolute;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(700, 14px, 1.14);
   text-transform: uppercase;
 }
