--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './base/common';
 @import './utils/hidden';
 @import './components/container';
+@import './components/logo';
 @import './components/btn';
 @import './components/social-list';
 @import './components/footer-input';
