--- a/sass/layout/_section-team.scss
+++ b/sass/layout/_section-team.scss
@@ -7,7 +7,7 @@
   margin-left: -30px;
   margin-top: -30px;
 }
-.item-img-team {
+.section-team_item-img-team {
   padding-bottom: 30px;
   margin-left: 30px;
   margin-top: 30px;
@@ -20,19 +20,19 @@
 .team-photo {
   margin-bottom: 30px;
 }
-.section-team-name,
-.section-team-profesion {
+.section-team_name,
+.section-team_profesion {
   margin: 0;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
-.section-team-name {
+.section-team_name {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
 }
-.section-team-profesion {
+.section-team_profesion {
   margin-bottom: 16px;
   font-weight: 400;
 }
