--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,16 +1,16 @@
 .social-list {
   @extend %justify-content;
 }
-.social-item {
+.social-list_item {
   width: 44px;
   height: 44px;
 }
-.social-item {
-  & + .social-item {
+.social-list_item {
+  & + .social-list_item {
     margin-left: 10px;
   }
 }
-.social-link {
+.social-list_link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -23,13 +23,13 @@
   }
 }
 
-.social-icon {
+.social-list_icon {
   width: 20px;
   height: 20px;
   fill: var(--primary-icon-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .social-link:hover &,
-  .social-link:focus & {
+  .social-list_link:hover &,
+  .social-list_link:focus & {
     fill: var(--secondary-text-color);
   }
 }
