--- a/sass/layout/_section-work.scss
+++ b/sass/layout/_section-work.scss
@@ -1,9 +1,9 @@
 .section-work {
   padding-top: 0;
 }
-.section-work-title,
-.section-team-title,
-.section-clients-title {
+.section-work_title,
+.section-team_title,
+.section-clients_title {
   margin-bottom: 50px;
   color: var(--title-text-color);
   @include font(700, 36px, 1.17);
@@ -15,13 +15,13 @@
   margin-left: -30px;
   margin-top: -30px;
 }
-.item-img {
+.section-work_item-img {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
   position: relative;
 }
-.item-img-title {
+.section-work_item-img-title {
   bottom: 0;
   width: 100%;
   padding: 27px;
