--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,10 +5,6 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .list {
   padding: 0;
   margin: 0;
@@ -24,4 +20,7 @@ body {
 .text {
   padding: 0;
   margin: 0;
+}
+img {
+  display: block;
 }
