--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,8 +4,18 @@
   @include font(700, 26px, 1.19);
   text-decoration: none;
 }
-.logo-item {
+.logo-header {
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
+}
+.header-studio {
+  color: var(--title-text-color);
+}
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
+}
+.footer-studio {
+  color: var(--secondary-text-color);
 }
