--- a/sass/layout/_section-clients.scss
+++ b/sass/layout/_section-clients.scss
@@ -4,7 +4,7 @@
   margin-left: -30px;
   margin-top: -30px;
 }
-.section-clients_link {
+.section-clients__link {
   display: flex;
   height: 92px;
   border: 1px solid #afb1b8;
@@ -17,20 +17,20 @@
     border: 1px solid var(--accent-color);
   }
 }
-.section-clients_item {
+.section-clients__item {
   margin-top: 30px;
   margin-left: 30px;
   flex-basis: calc(100% / 6 - 30px);
 }
-.section-clients_logo {
+.section-clients__logo {
   width: 106px;
   height: 60px;
   fill: var(--primary-icon-color);
   align-items: center;
   justify-content: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .section-clients_link:hover &,
-  .section-clients_link:focus & {
+  .section-clients__link:hover &,
+  .section-clients__link:focus & {
     fill: var(--accent-color);
   }
 }
