--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,16 +1,16 @@
 .social-list {
   @extend %justify-content;
 }
-.social-list_item {
+.social-list__item {
   width: 44px;
   height: 44px;
 }
-.social-list_item {
-  & + .social-list_item {
+.social-list__item {
+  & + .social-list__item {
     margin-left: 10px;
   }
 }
-.social-list_link {
+.social-list__link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -22,14 +22,13 @@
     background-color: var(--accent-color);
   }
 }
-
-.social-list_icon {
+.social-list__icon {
   width: 20px;
   height: 20px;
   fill: var(--primary-icon-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .social-list_link:hover &,
-  .social-list_link:focus & {
+  .social-list__link:hover &,
+  .social-list__link:focus & {
     fill: var(--secondary-text-color);
   }
 }
