--- a/sass/layout/_section-plan.scss
+++ b/sass/layout/_section-plan.scss
@@ -4,7 +4,7 @@
   margin-left: -30px;
   margin-top: -30px;
 }
-.section-plan_icon {
+.section-plan__icon {
   display: flex;
   height: 120px;
   margin-bottom: 30px;
@@ -13,21 +13,21 @@
   align-items: center;
   justify-content: center;
 }
-.section-plan_svg {
+.section-plan__svg {
   width: 70px;
   height: 70px;
 }
-.section-plan_title {
+.section-plan__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
   @include font(700, 14px, 1.14);
   text-transform: uppercase;
 }
-.section-plan_item {
+.section-plan__item {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 4 - 30px);
 }
-.section-plan_text {
+.section-plan__text {
   @include font(400, 14px, 1.71);
 }
