--- a/sass/layout/_section-portfolio.scss
+++ b/sass/layout/_section-portfolio.scss
@@ -1,7 +1,7 @@
-.section-main {
+.section-portfolio {
   background-color: var(--secondary-text-color);
 }
-.buttons {
+.buttons-portfolio {
   padding: 6px 22px;
   margin-right: 8px;
   border-radius: 4px;
@@ -20,16 +20,16 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-.section-main-buttons {
+.section-portfolio-buttons {
   @extend %justify-content;
   margin-bottom: 50px;
 }
-.section-main-buttons .current {
+.section-portfolio-buttons .current {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.section-main-buttons .current {
+.section-portfolio-buttons .current {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -37,17 +37,17 @@
 }
 /*Портфолио*/
 
-.section-pictures {
+.section-portfolio-pictures {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
-.item-pictures .link {
+.portfolio-item-pictures .link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.item-pictures {
+.portfolio-item-pictures {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 9 - 30px);
@@ -73,8 +73,8 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .item-pictures .link:hover &,
-  .item-pictures .link:focus & {
+  .portfolio-item-pictures .link:hover &,
+  .portfolio-item-pictures .link:focus & {
     transform: translateY(0);
     opacity: 1;
   }
