--- a/sass/layout/_section-work.scss
+++ b/sass/layout/_section-work.scss
@@ -1,9 +1,9 @@
 .section-work {
   padding-top: 0;
 }
-.section-work_title,
-.section-team_title,
-.section-clients_title {
+.section-work__title,
+.section-team__title,
+.section-clients__title {
   margin-bottom: 50px;
   color: var(--title-text-color);
   @include font(700, 36px, 1.17);
@@ -15,16 +15,17 @@
   margin-left: -30px;
   margin-top: -30px;
 }
-.section-work_item-img {
+.section-work__item-img {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
   position: relative;
 }
-.section-work_item-img-title {
+.section-work__item-img-title {
   bottom: 0;
   width: 100%;
   padding: 27px;
+  margin: 0;
   color: var(--secondary-text-color);
   background-color: rgba(47, 48, 58, 0.8);
   text-align: center;
